--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "webpack": ">=5.76.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
